--- a/scss/elements/_projects.scss
+++ b/scss/elements/_projects.scss
@@ -1,245 +1,270 @@
-.projects {
-	@include span-columns(12);
-  	//margin-top: 69px;
-  	background-color: $lightGray;
-  	text-align: center;
-  	
-  	/*
-  	.top_section.projects {
-	  	@include span-columns(12);
-		background: url('../images/projects-main.jpg') no-repeat;
-		background-size: 100% 100%;
-		background-attachment: scroll;
-		text-align: center;
-		color: $white;
-		position: relative;
-		
-		@include media($mobile){
-			//background-position: center 62px;
-		}
-		
-		.header_wrap {
-			@include span-columns(12);
-			padding: 12% 0 9%;
-			background: rgba(0,0,0,.5);
-			
-			@include media($tablet){
-				padding: 15% 0 7%;
-			}
-			
-			@include media($mobile){
-				padding: 18% 0 10%;
-			}
-			
-			@include media($smallMobile){
-				padding: 24% 0 10%;
-			}
-		}
-		
-		h2 {
-			font-family: 'Butler Ultra Light';
-			font-size: 70px;
-			line-height: 1;
-			text-shadow: 3px 3px 3px rgba(85,94,94,0.9);
-			text-transform: uppercase;
-			
-			@include media($tablet){
-				font-size: 5.5vw;
-			}
-			
-			@include media($mobile){
-				font-size: 9vw;
-			}
-			
-			@include media($smallMobile){
-				font-size: 11vw;
-			}
-		}
-		
-		p {
-			font-size: 24px;
-			text-shadow: 1px 0px 4px rgba(149, 150, 161, 0.9);
-		}
-  	}
-  	*/
-  	
-  	.projects_section {
-	  	@include span-columns(12);
-	  	padding-bottom: 40px;
-	  	background: $white;
-	  	
-	  	h2 {
-			margin-bottom: 65px;
-			font-size: 54px;
-			
-			@include media($tablet){
-				font-size: 42px;
-			}
-			
-			@include media($mobile){
-				font-size: 38px;
-				margin-bottom: 50px
-			}
-		}
-		
-	/*  .row {
-			@include span-columns(12);
-			margin-bottom: 24px;
-			
-			@include media($tablet){
-				margin-bottom: 0;
-			}
-	*/	.projects_wrap {
-			@include span-columns(12);
-		}
-		
-		.column_project {
-			width: 24.1%;
-			float: left;
-			margin-right: 1.2%;
-			margin-bottom: 10px;
-			
-			@include media($tablet){
-				width: 32.5%;
-			}
-			
-			@include media($mobile){
-				width: 49.4%;
-				margin-bottom: 5px;
-			}
-			
-			&:nth-child(4n + 0) {
-				margin-right: 0;
-				
-				@include media($tablet){
-					margin-right: 1.2%;
-				}
-			}
-			
-			&:nth-child(3n + 0) {
-				@include media($tablet){
-					margin-right: 0;
-				}
-				
-				@include media($mobile){
-					margin-right: 1.2%
-				}
-			}
-			
-			&:nth-child(2n + 0) {
-				@include media($mobile){
-					margin-right: 0;
-				}
-			}
-			
-			
-		/*	
-			&:nth-child(3n) {
-				margin-right: 0;
-				
-				@include media($tablet){
-					margin-right: 3.57866%;
-				}
-			}
-			
-			&:nth-child(2n + 2) {
-				@include media($tablet){
-					margin-right: 0;
-				}
-			}
-			*/
-			.content {
-				@include span-columns(12);
-				/*border: 4px solid $black;
-				border-radius: 5px;
-				-webkit-border-radius: 5px;
-				-moz-border-radius: 5px;*/
-				transition: all 0.5s;
-				
-				&:hover {
-					box-shadow: 0 0 25px 14px rgba(0,0,0,.5);
-					transform: scale(1.05);
-					z-index: 2;
+.single_project {
+	text-align: center;
 
-					.text_wrap {
-						display: none;
-					}
-				}
+	.description {
+		padding: 0 20%;
+
+		@include media($mobile) {
+			padding: 0 20px;
+		}
+
+		h3 {
+			font-family: 'Titillium SemiboldUpright', sans-serif;
+			font-size:28px;
+			line-height:1.2;
+			margin-bottom: 10px;
+
+			@include media($mobile) {
+				font-size:24px;
 			}
-			
-				
-			.text_wrap {
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				top: 0;
-				display: flex;
-				align-items: center;
+		}
+
+		p {
+			margin-bottom: 40px;
+
+			@include media($mobile) {
+				font-size: 14px;
+			}
+		}
+	}
+
+	.bottom_desc {
+		background-color:$teal;
+		color: $white;
+		margin-top: 60px;
+		padding: 30px 20%;
+
+		h4 {
+			margin:0;
+		}
+
+		a {
+			color: $white;
+
+			&:hover {
+				color: $lightGrayBlue;
+			}
+		}
+	}
+
+	nav {
+		@include span-columns(12);
+		padding: 20px 0;
+
+		.previous_links {
+			float: left;
+			text-align: left;
+
+			.nav-previous.top {
+				text-transform: uppercase;
+				margin-bottom: 4px;
+			}
+		}
+
+		.next_links {
+			float:right;
+			text-align: right;
+
+			.nav-next.top {
+				text-transform: uppercase;
+				margin-bottom: 4px;
+			}
+		}
+
+	}
+
+	.project_images {
+
+		article {
+			background-color: $lightGrayBlue;
+			padding: 20px 60px 60px;
+			margin-bottom: 40px;
+			border-radius: 6px;
+			-webkit-border-radius: 6px;
+			-moz-border-radius: 6px;
+
+			header {
 				text-align: center;
-				
-				h2 {
-					width: 100%;
-					font-size: 30px;
-					position: relative;
-					text-align: center;
-					top: 0;
-					z-index: 1;
-					color: $white;
-					font-weight: 700;
-					line-height: 1;
+				padding:0 10% 20px;
+				line-height: 1.2;
+				margin-bottom: 40px;
+				border-bottom: 1px solid;
+				border-color: rgba(155,155,155,.2);
+
+				h3 {
+					margin: 0 0 10px;
+				}
+
+				p {
 					margin: 0;
-					
-					@include media($tablet){
-						font-size: 32px;
-					}
-					
-					@include media($mobile){
-						font-size: 5.2vw;
-					}
 				}
 			}
-			
-			a {
-				display: block;
+
+			img {
+				border-radius: 6px;
+				-webkit-border-radius: 6px;
+				-moz-border-radius: 6px;
+			}
+		}
+	}
+
+	.contact_section {
+		background-color: $darkBlue;
+		text-align: center;
+		padding: 40px 0;
+
+		header {
+			margin-bottom: 40px;
+			p {
+				padding: 0 20%;
+			}
+		}
+
+		h2 {
+			color: $white;
+			margin-bottom: 20px;
+		}
+
+		h4 {
+			font-family: 'Lato Light', sans-serif;
+			font-weight: lighter;
+			color: $white;
+			font-size: 26px;
+			line-height: 1.2;
+			margin: 20px 0;
+
+			@include media($mobile){
+				font-size: 20px;
+			}
+		}
+
+		p {
+			color: $lightBlueText;
+			font-size: 14px;
+		}
+
+		.form_wrap {
+			width: 65%;
+			float:none;
+			margin: 0 auto;
+			border: 1px solid;
+			padding: 40px;
+			border-radius: 6px;
+			-webkit-border-radius: 6px;
+			-moz-border-radius: 6px;
+			border-color: rgba(255,255,255,.4);
+
+			@include media($tablet){
+				position: relative;
 				width: 100%;
-				float: left;
-				
-				&.fancybox {
-				
+			}
+
+			#FSContact2 {
+				@include span-columns(12);
+
+				#fscf_div_field2_0 {
+
 					&:before {
 						content: '';
+						background: url('../images/icon-person.jpg') no-repeat;
+						width: 20px;
+						height: 20px;
 						position: absolute;
-						width: 100%;
-						height: 100%;
-						background: rgba(0,0,0,.4);
-						top: 0;
 						left: 0;
-						z-index: 1;
-					}
-					
-					&:hover {
-					
-						&:before {
-							background: transparent;
-						}							
+						top: 16px;
 					}
 				}
-			}
-			
-			.text_link {
-				color: $black;
-				padding: 10px 0 20px;
-				font-size: 22px;
-				
-				@include media($mobile){
-					font-size: 18px;
-				}
-			}
-		}
-		//} 
-  	}
-}
 
-.popup {
-	display: none;
+				#fscf_div_field2_1 {
+					&:before {
+						content: '';
+						background: url('../images/icon-envelope-blue.jpg') no-repeat;
+						width: 20px;
+						height: 20px;
+						position: absolute;
+						left: 0;
+						top: 16px;
+					}
+				}
+
+				#fscf_div_field2_3 {
+					&:before {
+						content: '';
+						background: url('../images/icon-message.jpg') no-repeat;
+						width: 20px;
+						height: 20px;
+						position: absolute;
+						left: 0;
+						top: 16px;
+					}
+				}
+			}
+
+			input {
+				background: transparent;
+				border-top: none;
+				border-left: none;
+				border-right: none;
+				border-bottom: 1px solid #fff;
+				padding: 10px 10px 10px 24px;
+				margin-bottom: 40px;
+			}
+
+			textarea {
+				background: transparent;
+				border-top: none;
+				border-left: none;
+				border-right: none;
+				border-bottom: 1px solid #fff;
+				padding: 10px 10px 10px 24px;
+				margin-bottom: 20px;
+			}
+
+			input[type="submit"] {
+				width: 100%;
+				display: block;
+				color: $white;
+				padding: 15px 0;
+				border-radius: 3px;
+				-webkit-border-radius: 3px;
+				-moz-border-radius: 3px;
+				font-size: 16px;
+				text-transform: uppercase;
+				border: 1px solid $white;
+				text-align: center;
+
+				@include media($tablet){
+					padding: 12px 0;
+				}
+
+				@include media($mobile){
+					font-size: 14px;
+					padding: 10px 0;
+				}
+
+				@include media($smallMobile){
+					padding: 8px 0;
+					font-size: 13px;
+				}
+
+				&:hover {
+					color: $darkBlue;
+					background: $white;
+				}
+
+			}
+
+		}
+
+	}
+
+	.nav-previous a, .nav-next a {
+		color: #143e57;
+		padding: 10px 0;
+		font-size: 16px;
+
+		&:hover {
+			color: $red;
+		}
+	}
 }
