--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 @import "elements/header";
 @import "elements/sidebar";
 @import "elements/footer";
+@import "elements/forms";
 @import "elements/home";
 @import "elements/projects";
 @import "elements/contact";
