--- a/scss/elements/_home.scss
+++ b/scss/elements/_home.scss
@@ -116,7 +116,12 @@
 						left: 0;
 						width: 100%;
 						height: 100%;
+						background-size: 100%;
 						z-index: 2;
+
+						@include media($smallMobile) {
+							width: 75%;
+						}
 					}
 				}
 			}
@@ -125,34 +130,29 @@
 
 	.column_section {
 		padding: 40px 0;
+		text-align: center;
+
+		h3 {
+			display: inline-block;
+			margin-bottom: 10px;
+		}
+
+		p {
+			margin-bottom: 40px;
+		}
 
 		.projects {
 			@include span-columns(12);
 			background-color: $lightGray;
-			text-align: center;
 
 			.projects_section {
 				@include span-columns(12);
 				padding-bottom: 40px;
 				background: $white;
 
-				h2 {
-					margin-bottom: 65px;
-					font-size: 54px;
-
-					@include media($tablet){
-						font-size: 42px;
-					}
-
-					@include media($mobile){
-						font-size: 38px;
-						margin-bottom: 50px
-					}
-				}
-
 				.projects_wrap {
-					  @include span-columns(12);
-				  }
+					@include span-columns(12);
+				}
 
 				.column_project {
 					width: 24.1%;
@@ -229,12 +229,12 @@
 							margin: 0 0 10px 0;
 							text-transform: uppercase;
 
-							@include media($tablet){
-								font-size: 32px;
+							@include media($tablet) {
+								font-size:16px;
 							}
 
-							@include media($mobile){
-								font-size: 5.2vw;
+							@include media($mobile) {
+								font-size: 14px;
 							}
 						}
 
@@ -248,6 +248,10 @@
 							font-weight: 700;
 							line-height: 1;
 							margin: 0;
+
+							@include media($mobile) {
+								font-size: 12px;
+							}
 						}
 					}
 
@@ -486,11 +490,11 @@
 		flex-direction: row;
 		-ms-flex-wrap: nowrap;
 		flex-wrap: nowrap;
-		
-		@include media($tablet){
+
+		@include media($tablet) {
 			@include span-columns(8);
 		}
-		
+
 		.column {
 			width: 50%;
 			float: left;
@@ -505,34 +509,33 @@
 			flex-direction: column;
 			-ms-flex-wrap: nowrap;
 			flex-wrap: nowrap;
-			
-			@include media($tablet){
+
+			@include media($tablet) {
 				@include span-columns(8);
 			}
-			
+
 			&:first-child {
 				background: $teal;
-				
-				@include media($mobile){
+
+				@include media($mobile) {
 					padding-top: 20px;
 				}
-				
+
 				.container {
 					max-width: 34.5em;
 					margin-right: 0;
-					
-					@include media($tablet){
+
+					@include media($tablet) {
 						max-width: 70.25em;
 						margin-right: auto;
 					}
 				}
 			}
-			
-			
-			
+
+
 			&:last-child {
 				background: $darkBlue;
-				
+
 				.container {
 					display: flex;
 					flex-direction: column;
@@ -540,26 +543,26 @@
 					max-width: 34.5em;
 					margin-left: 0;
 					min-height: 100%;
-					
-					@include media($tablet){
+
+					@include media($tablet) {
 						max-width: 70.25em;
 						margin-right: auto;
 						display: block;
 					}
 				}
-				
+
 				p {
 					color: $white;
 					//margin-top: 20px;
 				}
 			}
-			
+
 			h2 {
 				color: $white;
 				text-align: left;
 				margin-bottom: 20px;
 			}
-			
+
 			h4 {
 				font-family: 'Lato Light';
 				font-weight: lighter;
@@ -567,297 +570,16 @@
 				font-size: 26px;
 				line-height: 1.2;
 				margin: 20px 0;
-				
-				@include media($mobile){
+
+				@include media($mobile) {
 					font-size: 20px;
 				}
 			}
-			
+
 			p {
 				color: $lightBlueText;
 				font-size: 14px;
 			}
 		}
-
-		.form_wrap {
-			position: absolute;
-			bottom: 0;
-			width: 85%;
-
-			@include media($tablet){
-				position: relative;
-				width: 100%;
-			}
-
-			#FSContact2 {
-				@include span-columns(12);
-
-				#fscf_div_field2_0 {
-
-					&:before {
-						content: '';
-						background: url('../images/icon-person.jpg') no-repeat;
-						width: 20px;
-						height: 20px;
-						position: absolute;
-						left: 0;
-						top: 16px;
-					}
-				}
-
-				#fscf_div_field2_1 {
-					&:before {
-						content: '';
-						background: url('../images/icon-envelope-blue.jpg') no-repeat;
-						width: 20px;
-						height: 20px;
-						position: absolute;
-						left: 0;
-						top: 16px;
-					}
-				}
-
-				#fscf_div_field2_3 {
-					&:before {
-						content: '';
-						background: url('../images/icon-message.jpg') no-repeat;
-						width: 20px;
-						height: 20px;
-						position: absolute;
-						left: 0;
-						top: 16px;
-					}
-				}
-			}
-
-			input {
-				background: transparent;
-				border-top: none;
-				border-left: none;
-				border-right: none;
-				border-bottom: 1px solid #fff;
-				padding: 10px 10px 10px 24px;
-				margin-bottom: 40px;
-			}
-
-			textarea {
-				background: transparent;
-				border-top: none;
-				border-left: none;
-				border-right: none;
-				border-bottom: 1px solid #fff;
-				padding: 10px 10px 10px 24px;
-				margin-bottom: 20px;
-			}
-
-			input[type="submit"] {
-				width: 100%;
-				display: block;
-				color: $white;
-				padding: 15px 0;
-				border-radius: 3px;
-				-webkit-border-radius: 3px;
-				-moz-border-radius: 3px;
-				font-size: 16px;
-				text-transform: uppercase;
-				border: 1px solid $white;
-				text-align: center;
-
-				@include media($tablet){
-					padding: 12px 0;
-				}
-
-				@include media($mobile){
-					font-size: 14px;
-					padding: 10px 0;
-				}
-
-				@include media($smallMobile){
-					padding: 8px 0;
-					font-size: 13px;
-				}
-
-				&:hover {
-					color: $darkBlue;
-					background: $white;
-				}
-
-			}
-
-		}
 	}
-	/*
-	.bottom_bar {
-		@include span-columns(12);
-		text-align: center;
-		background: url('../images/computer-coffee.jpg') no-repeat;
-		background-size: cover;
-		background-attachment: fixed;
-		position: relative;
-		background-position: center 63%;
-        
-        @include media($mobile){
-        	background: url('../images/computer-coffee-mobile.jpg') no-repeat;
-        	background-size: cover;
-			background-attachment: fixed;
-			position: relative;
-			background-position: center 63%;
-        }
-        
-        @include media($smallMobile){
-        	background-position: 60% center;
-        }
-
-		.bar_wrap {
-			@include span-columns(12);
-			padding: 6% 0;
-			background: rgba(0,0,0,.5);
-		}
-		
-		h2 {
-			font-family: 'Butler Ultra Light';
-			font-size: 45px;
-			text-shadow: 3px 3px 3px rgba(85,94,94,0.9);
-			text-transform: uppercase;
-			font-style: italic;
-			-webkit-backface-visibility: hidden;
-			opacity: 0;
-			
-			&.animate_top {
-				top: -100px;
-				opacity: 0;
-				
-				&.fade_in_down {
-					-webkit-transition: 1.5s ease-in-out;
-					-moz-transition: 1.5s ease-in-out;
-					-o-transition: 1.5s ease-in-out;
-					transition: 1.5s ease-in-out;
-					opacity: 1;
-					top:0;
-				}
-			}
-			
-			
-			&.animate_left {
-				left: -400px;
-				opacity: 0;
-				
-				&.fade_in_left {
-					-webkit-transition: 1.5s ease-in-out;
-					-moz-transition: 1.5s ease-in-out;
-					-o-transition: 1.5s ease-in-out;
-					transition: 1.5s ease-in-out;
-					opacity: 1;
-					left: 0;
-				}
-			}
-			
-			@include media($mobile){
-				font-size: 30px;
-				line-height: 1;
-				margin-bottom: 20px;
-			}
-			
-			@include media($smallMobile){
-				font-size: 5.6vw;
-				margin-bottom: 15px;
-			}
-		}
-		
-		.button_wrap {
-			
-			.animate_bottom {
-				bottom: -100px;
-				opacity: 0;
-				
-				&.fade_in_up {
-					bottom: 0;
-					opacity: 1;
-					-webkit-transition: 1.5s ease-in-out;
-					-moz-transition: 1.5s ease-in-out;
-					-o-transition: 1.5s ease-in-out;
-					transition: 1.5s ease-in-out;
-				}
-			}
-			
-			@include media($smallMobile){
-				margin-top: 5px;
-			}
-		}
-		
-	}
-	
-	.projects_section {
-		@include span-columns(12);
-		text-align: center;
-		padding: 40px 0;
-		background: $white;
-		
-		h2 {
-			font-family: 'Butler Regular';
-			font-size: 54px;
-			margin-bottom: 50px;
-			color: $black;
-			
-			@include media($mobile){
-				font-size: 36px;
-			}
-		}
-		
-		img {
-			width: 67%;
-			
-			@include media($mobile){
-				width: 100%;
-			}
-		}
-		
-		.swiper-container {
-			
-			&:after {
-				content: "";
-				position: absolute;
-				-webkit-box-shadow: 7px 7px 5px 0px #000;
-				-moz-box-shadow: 7px 7px 5px 0px #000;
-				box-shadow: 7px 7px 5px 0px #000;
-			}
-		}
-		
-		.swiper-pagination {
-			margin-top: 20px;
-			width: 100%;
-			
-			.swiper-pagination-bullet {
-				margin: 5px;
-			}
-			
-			.swiper-pagination-bullet-active {
-				background: $red;
-			}
-		}
-		
-		.swiper-button-prev {
-			@include media($mobile){
-				display: none;
-			}
-		}
-		
-		.swiper-button-next {
-			@include media($mobile){
-				display: none;
-			}
-		}
-
-		.button {
-			//color: $darkBlue;
-			padding: 12px 35px;
-			margin-top: 70px;
-			
-			@include media($mobile){
-				padding: 7px 22px;
-			}
-		}
-	}
-	*/
-	
 }
